# python-grpc-example

./: .gitignore  README.md  tasks.py
client/: README.md  pyproject.toml
client/src/warehouse/client/: order.py  product.py
grpc/: README.md  pyproject.toml
grpc/src/warehouse/grpc/: warehouse.proto
grpc/tests/: test_main.py
service/: README.md  pyproject.toml  tasks.py
service/src/warehouse/: main.py  repository.py  service.py
service/tests/: conftest.py  test_main.py  test_service.py
