[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = [

]

packages = [
    {include = "warehouse", from="src"},
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "5.3.2"
black = {version = "19.10b0",allow-prereleases = true}
invoke = "^1.3"


[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         
    | \.git          
    | build
    | dist
    | generated
  )/
)
'''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
