[tool.poetry]
name = "grpc"
version = "0.1.0"
description = ""
authors = [

  "lukhar <lukasz.har@quantcast.com>"

]

packages = [
    {include = "grpc", from="src"},
]

[tool.poetry.dependencies]
python = "^3.7"
grpcio = "^1.27.2"
protobuf = "^3.11.3"

[tool.poetry.dev-dependencies]
pytest = "5.3.2"
black = {version = "19.10b0",allow-prereleases = true}
invoke = "^1.3"


[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         
    | \.git          
    | build
    | dist
    | generated
  )/
)
'''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
