[tool.poetry]
name = "warehouse-service"
version = "0.1.0"
description = "A very simple python grpc project example."
authors = [
  "lukhar <lukasz.har@gmail.com>"
]

packages = [
    {include = "warehouse", from="src"},
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
warehouse-grpc = {path = "../grpc"}

[tool.poetry.dev-dependencies]
pytest = "5.3.2"
black = {version = "19.10b0",allow-prereleases = true}
invoke = "^1.3"
ipdb = "^0.13.2"


[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         
    | \.git          
    | build
    | dist
    | generated
  )/
)
'''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
